cabal-version:       2.0
name:                delve
version:             0.0.0
synopsis:            CLI File Browser
description:         CLI File Browser
homepage:            https://github.com/ChrisPenner/delve
bug-reports:         https://github.com/ChrisPenner/delve/issues
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2019 Chris Penner
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4

source-repository head
  type:                git
  location:            https://github.com/ChrisPenner/delve.git

library
  hs-source-dirs:      src
  exposed-modules:     Delve
                       

  build-depends:       base ^>= 4.11.1.0
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite delve-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.11.1.0
                     , delve
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
